# Face-Liveness_detection

./: CMakeLists.txt  Func_liveness_detection.c  README.md  RESULT.txt  dlib_test.cpp  dlib_test_process.cpp  liveness_detection.c  raw_0001_frontface.raw
